--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1> Hello Mom (test for my own website) </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>myWebpage</title>
+    
+</head>
+<body>
+    <!--Below is making a link to the about page--> 
+    <!-- the "./ " in about link means from where my current page is-->
+    <nav>
+        <a href = "./about"> About Page</a>
+    </nav>
+    <h1>Hello Mom</h1>
+</body>
+</html>
