added links to my favorite colors and my hobbies with basic html in each link

--- a/Colors/index.html
+++ b/Colors/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>My Favorite Colors</title>
   </head>
   <body>
-    Home 
-    <p><a href="./Hobbies/">My Hobbies</a></p>
-    <a href="./Colors/">My favorite Colors</a>
+    <h1>My favorite colors</h1>
+    <p>Black and red</p>
+    <a href="..">Home</a></p>
   </body>
 </html>
