--- a/Hobbies/index.html
+++ b/Hobbies/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>My Hobbies</title>
   </head>
   <body>
-    Home 
-    <p><a href="./Hobbies/">My Hobbies</a></p>
-    <a href="./Colors/">My favorite Colors</a>
+    <h1>Hobbies</h1>
+    <p>I love to ride atvs, draw, play video games, and work on cars.</p>
+    <a href="..">Home</a></p>
   </body>
 </html>
