--- a/index.html
+++ b/index.html
@@ -11,4 +11,8 @@
     <p><a href="./Hobbies/">My Hobbies</a></p>
     <a href="./Colors/">My favorite Colors</a>
   </body>
+  <script type="module">
+    import _ from "lodash";
+    alert(_.join(["Hello","User!"], ', '));
+  </script>
 </html>
