fixing the error still following video

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <p><a href="./Hobbies/">My Hobbies</a></p>
     <a href="./Colors/">My favorite Colors</a>
   </body>
-  <script type="module">
-    import _ from "lodash";
-    alert(_.join(["Hello","User!"], ', '));
+  <script type="module" src="/src/index.js">
   </script>
 </html>
