added a red background in the colors link with a button

--- a/Colors/index.html
+++ b/Colors/index.html
@@ -10,5 +10,13 @@
     <h1>My favorite colors</h1>
     <p>Black and red</p>
     <a href="..">Home</a></p>
+    <button id="colorButton">Click me!</button>
+
+    
+    <script>
+      document.getElementById("colorButton").addEventListener("click", function() {
+          document.body.style.backgroundColor = "red"; // Change background to red
+      });
+  </script>
   </body>
 </html>
