added react plug ins and a 'react' page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     Home 
     <p><a href="./Hobbies/">My Hobbies</a></p>
     <a href="./Colors/">My favorite Colors</a>
-
+    <p>
+    <a href="./react/">React app.</a>
+    </p>
 
 
   
