--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <body>
     Home 
     <p><a href="./Hobbies/">My Hobbies</a></p>
+    <p>This link will take you to what I do for my Hobbies</p>
     <a href="./Colors/">My favorite Colors</a>
-    <p>
-    <a href="./react/">React app.</a>
-    </p>
-
+    <p>This Link will show you my favorite colors and allow you to turn the background red</p>
+    
+    
+    <p><a href="./react/">React app.</a></p>
+    <p>This link will take you to my react app inside is a "colorPicker" That will allow you to change the background Color</p>
 
   
   </body>
