general clean up and 'finishing touches' of the color Picker

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <p>This Link will show you my favorite colors and allow you to turn the background red</p>
     
     
-    <p><a href="./react/">React app.</a></p>
-    <p>This link will take you to my react app inside is a "colorPicker" That will allow you to change the background Color</p>
+    <p><a href="./react/">React app</a></p>
+    <p>This link will take you to my react based page. There is a "colorPicker" That will allow you to change the background Color</p>
 
   
   </body>
