--- a/react/colorPicker.html
+++ b/react/colorPicker.html
@@ -32,13 +32,16 @@
     </style>
 </head>
 <body>
-    <nav>
-        <a href="../index.html">Go back Home</a> <!-- Back to home link at the top -->
-    </nav>
-    <h1>Welcome to the Color Picker</h1>
-    <div id="react-root"></div> 
     
+     <nav>
+         <a href="../index.html">Go back Home</a> <!-- Back to home link at the top -->
+     </nav>
+       <main>
+        <h1>Welcome to the Color Picker</h1>
+        <div id="react-root"></div> 
+       </main>
 
-    <script type="module" src="../react/reactRoot.jsx"></script> 
+      
 </body>
+<script type="module" src="../react/reactRoot.jsx"></script> 
 </html>
