--- a/index.html
+++ b/index.html
@@ -8,18 +8,15 @@
   </head>
   <body>
     Home 
-    <p><a href="./Hobbies/">My Hobbies</a></p>
-    <p>This link will take you to what I do for my Hobbies</p>
-    <a href="./Colors/">My favorite Colors</a>
-    <p>This Link will show you my favorite colors and allow you to turn the background red</p>
+    <p><a href="./Hobbies/">My Hobbies</a> -> This link will take you to what I do for my Hobbies</p>
+
+    <p><a href="./Colors/">My favorite Colors</a> -> This Link will show you my favorite colors and allow you to turn the background red</p>
     
-    
-    <p><a href="./react/">React app</a></p>
-    <p>This link will take you to my react based page. There is a "colorPicker" That will allow you to change the background Color</p>
+    <p><a href="./react/">React app</a> -> This link will take you to my react based page. There is a "colorPicker" That will allow you to change the background Color</p>
 
   
   </body>
-  <script type="module">
+  <script type="module">S
     import _ from "lodash";
     alert(_.join(["Hello","User!"], ', '));
   </script>
