--- a/react/colorPicker.html
+++ b/react/colorPicker.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Picker</title>
+    <h1><a href="../index.html">Go back Home</a></h1>
     <style>
         nav {
             position: fixed;
@@ -32,14 +33,6 @@
     </style>
 </head>
 <body>
-    
-     <nav>
-         <a href="../index.html">Go back Home</a> <!-- Back to home link at the top -->
-     </nav>
-       <main>
-        <h1>Welcome to the Color Picker</h1>
-        <div id="react-root"></div> 
-       </main>
 
       
 </body>
